--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ body { font-family: monospace; background:#111; color:#eee; }
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
 
-<script src="export/nlp_pro.js"></script>
-<script src="export/project_manager.js"></script>
-<script src="export/godot.js"></script>
+<script src="libs/nlp_pro.js"></script>
+<script src="libs/project_manager.js"></script>
+<script src="godot.js"></script>
 
 </body>
 </html>
