--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ body { font-family: monospace; background:#111; color:#eee; }
 <input id="nlp-command" placeholder="Type a command..." />
 <button onclick="sendNLPCommandGUI()">Send</button>
 
+<script src="core/project_graph.js"></script>
+
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
 
