--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body { font-family: monospace; background:#111; color:#eee; }
 <button onclick="sendNLPCommandGUI()">Send</button>
 
 <script src="core/project_graph.js"></script>
+src="asset_manager/asset_handler.js"></script>
 
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
