--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body { font-family: monospace; background:#111; color:#eee; }
 
 <script src="core/project_graph.js"></script></script>
 <script src="asset_manager/asset_handler.js"></script>
-<script src="asset_manager/scene_composer.js"></script>
+<script src="libs/scene_composer.js"></script>
 
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
