--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ body { font-family: monospace; background:#111; color:#eee; }
 <script src="asset_manager/asset_handler.js"></script>
 <script src="libs/scene_composer.js"></script>
 
+<script src="export/zip_exporter.js"></script>
+
 <script src="libs/jszip.min.js"></script>
 <script src="libs/FileSaver.min.js"></script>
 
