--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- TOP HALF -->
   <div id="top-area">
 
-    <!-- TOP LEFT: FILE / PROJECT VIEW -->
+    <!-- TOP LEFT: PROJECT / FILES -->
     <div id="top-left" class="panel">
       <div class="panel-title">Project / Files</div>
       <div id="project-tree">
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <!-- TOP RIGHT: FILE INFO + PREVIEW -->
+    <!-- TOP RIGHT: FILE INFO / PREVIEW -->
     <div id="top-right" class="panel">
       <div class="panel-title">File Information</div>
       <div id="file-info">
