--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!-- LOGIC -->
 <script src="libs/nlp_pro.js"></script>
 <script src="libs/project_manager.js"></script>
-<script src="godot.js"></script>
+<script src="libs/godot.js"></script>
 
 <script>
   // Connect NLP input to ProjectManager
