--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <script src="export/zip_exporter.js"></script>
 
 <!-- LOGIC -->
+<script src="libs/jszip.min.js"></script>
 <script src="libs/nlp_pro.js"></script>
 <script src="libs/project_manager.js"></script>
 <script src="libs/godot.js"></script>
