--- a/index.html
+++ b/index.html
@@ -43,19 +43,23 @@
       <button id="nlp-send">Send</button>
     </div>
     <div id="nlp-log"></div>
+    <div id="suggestions"></div>
   </div>
 
 </div>
 
-<!-- TOUCH LAYOUT EDITOR POP-UP -->
-<div id="touch-editor" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:1000;">
-    <div id="editor-header" style="position:absolute; top:10px; left:10px; right:10px; height:40px; color:white; font-size:16px;">
-        <span>Touch Layout Editor</span>
-        <button id="close-editor" style="float:right;">Close</button>
-        <button id="save-editor" style="float:right; margin-right:10px;">Save Layout</button>
+<!-- Touch Editor Overlay -->
+<div id="touch-editor" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); z-index:9999; display:flex; flex-direction:column;">
+    <!-- Top Bar -->
+    <div style="flex:0 0 50px; background:#222; display:flex; align-items:center; padding:5px; border-bottom:2px solid #444;">
+        <span style="flex:1; color:#eee; font-weight:bold; font-size:1.2em;">Android Touch Layout Editor</span>
+        <button id="save-editor" style="margin-right:5px; padding:5px 10px; background:#333; color:#eee; border:1px solid #444; cursor:pointer;">Save</button>
+        <button id="close-editor" style="padding:5px 10px; background:#333; color:#eee; border:1px solid #444; cursor:pointer;">Close</button>
     </div>
-    <div id="editor-canvas" style="position:absolute; top:60px; left:0; right:0; bottom:0; background:#222; overflow:hidden;">
-        <!-- Touch elements will be dynamically added here -->
+
+    <!-- Canvas Area -->
+    <div id="editor-canvas" style="flex:1; position:relative; background:#111; overflow:hidden;">
+        <!-- Draggable nodes are dynamically added here -->
     </div>
 </div>
 
@@ -97,6 +101,8 @@
   nlpInput.addEventListener("keydown", (e) => {
     if (e.key === "Enter") sendNLPCommandGUI();
   });
+
+  // Touch editor buttons already handled in godot.js
 </script>
 
 </body>
