--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 <!-- Modular Godot Assembler -->
 <script src="libs/godot_state.js"></script>
 <script src="libs/godot_ui.js"></script>
+<script src="libs/godot_file_tree.js"></script>
 <script src="libs/godot_nodes.js"></script>
 <script src="libs/godot_touch_editor.js"></script>
 <script src="libs/godot_input.js"></script>
